--- a/admin/completion-qr-management.html
+++ b/admin/completion-qr-management.html
@@ -133,6 +133,17 @@
                     <span class="nav-label">Reports</span>
                 </a>
             </nav>
+
+            <div class="px-4 pb-4">
+    <label for="sidebar-toggle"
+        class="flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium
+               text-gray-600 dark:text-gray-400
+               hover:bg-gray-100 dark:hover:bg-white/5
+               transition-colors cursor-pointer">
+        <span class="material-symbols-outlined text-[22px]">chevron_left</span>
+        <span class="nav-label whitespace-nowrap">Collapse Sidebar</span>
+    </label>
+</div>
             <div class="p-4 mt-auto system-status">
                 <div class="rounded-2xl bg-gradient-to-br from-gray-50 to-gray-100 dark:from-white/5 dark:to-white/10 p-4 border border-border-light dark:border-white/5">
                     <div class="flex items-center gap-3 mb-3">
