--- a/home.html
+++ b/home.html
@@ -261,6 +261,17 @@
           <span>Report</span>
         </a>
       </div>
+      
+      <div class="px-4 pb-4">
+          <label for="sidebar-toggle"
+              class="flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium
+                    text-gray-600 dark:text-gray-400
+                    hover:bg-gray-100 dark:hover:bg-white/5
+                    transition-colors cursor-pointer">
+              <span class="material-symbols-outlined text-[22px]">chevron_left</span>
+              <span class="nav-label whitespace-nowrap">Collapse Sidebar</span>
+          </label>
+      </div>  
 
       <div class="system-status">
         <p class="text-[10px] font-bold text-gray-500 uppercase tracking-widest">System Status</p>
